# calculator

./: .travis.yml  CMakeLists.txt  Calculator.cpp  Calculator.hpp  main.cpp
tests/: CMakeLists.txt  CalculatorTests.cpp
